# json2ansi

./: .gitignore  README.md  example.json  flake.nix  main.py  pyproject.toml  schema.json  todo
examples/: example.jsonc
src/: main.py
src/json2ansi/: main.py  markdown_to_rich.py
